opam-version: "2.0"
name: "coq-ch2o"
version: "0.1"
synopsis: "A formalization of ISO C11 in Coq"
description: """
The CH2O project aims at formalizing novel features of the ISO C11 standard 
of the C programming language. CH2O provides an operational, executable, and 
axiomatic semantics for a significant fragment of C11.

Our recent paper A Typed C11 Semantics for Interactive Theorem Proving at CPP 
2015 gives a good overview of the CH2O project.
"""
authors: "Robbert Krebbers"
maintainer: "Robbert Krebbers"
license: "BSD"
homepage: "https://robbertkrebbers.nl/research/ch2o/"
bug-reports: "https://github.com/robbertkrebbers/ch2o/issues"
dev-repo: "https://github.com/robbertkrebbers/ch2o"
depends: [ 
  "ocaml" 
  "ocamlfind" 
  "ocamlbuild" 
  "coq" { (>= "8.13.2" & < "8.15~") | (= "dev") } 
  "num" 
  "coq-stdpp" { >= "1.6" | (= "dev") }
]
build: [make "-j%{jobs}%"]
install: [make "install"]